# igormoreno.github.io

./: .gitignore  LICENSE  README.md  cv.tex  igormoreno-site.cabal  index.html  index.md  site.hs
css/: default.css
docs/: CNAME  index.html
docs/css/: default.css
graphic-design/: favicon.psd  logo.psd
resources/: inspiration.md
src/public/: index.html  index.html~
src/public/css/: main.css
templates/: default.html
