name:                igormoreno-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/igormoreno/igormoreno.github.io
license:             BSD3
license-file:        LICENSE
author:              Igor Moreno Santos
maintainer:          igormoreno@gmail.com
copyright:           2022 Igor Moreno Santos
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable igormoreno-site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       filepath
